# micro-manager

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CodeOfConduct.md  Makefile.am  Makefile.am.nextgen  README.md  README.txt  acinclude.m4  autogen.sh  autogen.sh.nextgen  build-mmcore.sh  build.xml  build_instructions.txt  build_instructions_debian.txt  build_instructions_unix.txt  build_instructions_win.html  buildversion.txt  configure.ac  configure.ac.nextgen  configure.common  configure.common.nextgen  configure.in  debiancontrol  docker-compose.yaml  eclipse_dictionary.txt  ivy.xml  micromanager.sln  mkdebian.sh  mmUnixBuild.sh  mmUnixBuild.sh.nextgen  mmbuild.bat  run-linux.sh  runMMstudioDebian.sh  version.txt
DeviceAdapters/: MMDEVAPI.rules  Makefile.am  Makefile.am.nextgen  _ADAPTERS_NOT_IN_BUILD.txt  build.xml  configure.ac  configure.ac.nextgen  configure.in
DeviceAdapters/89NorthLDI/: 89North_LDI.vcxproj  LDI.cpp  LDI.h
DeviceAdapters/AAAOTF/: AAAOTF.cpp  AAAOTF.h  AAAOTF.vcproj  AAAOTF.vcxproj  AAAOTF.vcxproj.filters  AOTF.vcproj  Makefile.am  Makefile.am.nextgen
DeviceAdapters/ABS/: ABS.sln  ABS.vcproj  ABSCamera.cpp  ABSCamera.h  ABSCamera.vcproj  ABSCamera.vcxproj  ABSCamera.vcxproj.filters  ABSDelayLoadDll.h  AbsImgBuffer.cpp  AbsImgBuffer.h  AutoTimeMeasure.cpp  AutoTimeMeasure.h  CcmFileStd.cpp  CcmFileStd.h  ImageHeader.cpp  ImageHeader.h  MemoryIniFile.cpp  MemoryIniFile.h  TimeSpanPC.cpp  TimeSpanPC.h  abscommontools.cpp  abscommontools.h  absdelayloaddll.cpp  dllmain.cpp
DeviceAdapters/AF100X/: AF100X.cpp  AF100X.h  AF100X.vcproj
DeviceAdapters/AOTF/: AOTF.cpp  AOTF.h  AOTF.vcproj  AOTF.vcxproj  AOTF.vcxproj.filters  AOTF_vc8.vcproj  Makefile.am  Makefile.am.nextgen  build.xml  inpoutx64.lib
DeviceAdapters/ASI/: ASI.cpp  ASI.h  ASI.vcproj  ASIFW1000Hub.cpp  ASIFW1000Hub.h  Makefile.am  Makefile.in
DeviceAdapters/ASIFW1000/: ASIFW1000.cpp  ASIFW1000.h  ASIFW1000.vcproj  ASIFW1000.vcxproj  ASIFW1000.vcxproj.filters  ASIFW1000Hub.cpp  ASIFW1000Hub.h  Makefile.am  Makefile.am.nextgen  Makefile.in
DeviceKit/: Makefile.am  configure.ac  configure.ac.nextgen  configure.in
MMCore/: .cdtbuild  .cdtproject  .project  AppleHost.cpp  AppleHost.h  CircularBuffer.cpp  CircularBuffer.h  Compressor.cpp  Compressor.h  ConfigGroup.h  Configuration.cpp  Configuration.h  CoreCallback.cpp  CoreCallback.h  CoreProperty.cpp  CoreProperty.h  CoreUtils.h  DeviceManager.cpp  DeviceManager.h  Error.cpp  Error.h  ErrorCodes.h  FastLogger.cpp  FastLogger.h  FrameBuffer.cpp  FrameBuffer.h  Host.cpp  Host.h  IMMLogger.h  LogManager.cpp  LogManager.h  MMAcquisition.cpp  MMAcquisition.h  MMCore.cpp  MMCore.h  MMCore.vcproj  MMCore.vcxproj  MMCore.vcxproj.filters  MMCore_vc8.vcproj  MMEventCallback.h  (+17 more)
MMCoreJ_wrap/: CMMError.java  DeviceIOException.java  MMCoreJ.i  MMCoreJ_wrap.sln  MMCoreJ_wrap.vcproj  MMCoreJ_wrap.vcxproj  MMCoreJ_wrap.vcxproj.filters  MMCoreJ_wrap64.sln  MMCoreJ_wrap_1.1.sln  MMCoreJ_wrap_1.2.sln  MMCoreJ_wrap_v10.sln  MMCoreJ_wrap_vc8.sln  MMCoreJ_wrap_vc8.vcproj  MMCoreJ_wrap_x64.sln  MMCoreJ_wrapvc10.sln  Makefile.am  Makefile.am.nextgen  MetadataIndexError.java  MetadataKeyError.java  TaggedImage.java  build.xml  license.txt  mvnDeploy.bsh  pom.xml
MMCorePy_wrap/: MMCorePy.i  MMCorePy_wrap.sln  MMCorePy_wrap.vcproj  MMCorePy_wrap.vcxproj  MMCorePy_wrap.vcxproj.filters  MMCoreWrapDemo.py  Makefile.am  Makefile.am.nextgen  Python.props  Python.vsprops  setup.py
MMDevice/: Debayer.cpp  Debayer.h  DeviceBase.h  DeviceThreads.h  DeviceUtils.cpp  DeviceUtils.h  FixSnprintf.h  ImageMetadata.h  ImgBuffer.cpp  ImgBuffer.h  MMDevice-SharedRuntime.vcxproj  MMDevice-SharedRuntime.vcxproj.filters  MMDevice-StaticRuntime.vcxproj  MMDevice-StaticRuntime.vcxproj.filters  MMDevice.cpp  MMDevice.h  MMDeviceConstants.h  Makefile.am  ModuleInterface.cpp  ModuleInterface.h  Property.cpp  Property.h
NativeGUI/: Makefile.am  NativeGUI.h  NativeGUI.i  NativeGUIMac.mm  NativeGUI_Prefix.pch  NativeGUIstub.java  build.xml
Test_MMCore/: Makefile.am  Test_MMCore.cpp  Test_MMCore.sln  Test_MMCore.vcproj  Test_MMCore_Mac.cpp  Test_MMCore_vc8.vcproj
Test_Programs/: Makefile.am  configure.in  dummy.nextgen
Test_Serial/: Makefile.am  Test_Serial.cpp  Test_Serial.sln  Test_Serial.vcproj
Tracking/: .classpath  .project  Makefile.am  build.xml
acqEngine/: .gitignore  Makefile.am  Makefile.am.nextgen  README.md  build.bat  build.xml
autofocus/: AFOptionsDlg.java  AFOptionsDlgTB.java  Autofocus.java  AutofocusDuo.java  AutofocusTB.java  AutofocusTB_.java  Autofocus_.java  HardwareFocusExtender.java  Makefile.am  Makefile.am.nextgen  NullAutofocus.java  OughtaFocus.java  build.xml  build32.xml  build64.xml  license.txt
bindist/: Makefile.am  Makefile.am.nextgen
classext/: Makefile.am
hcs/: Makefile.am  build.xml
mmAsImageJMacros/: Makefile.am  README.md  build.xml  license.txt
mmstudio/: .classpath  .project  Makefile.am  Makefile.am.nextgen  build.xml  build32.bat  build32.xml  build32simple.bat  build64.bat  build64.xml  build_dist.xml  compile32.bat  license.txt
plugins/: Makefile.am  Makefile.am.nextgen  README.txt  build.xml  clojurepluginbuild.xml  clojurepluginbuild_noaot.xml  javapluginbuild.xml  pluginpaths.xml  pluginprops.xml
scripts/: 2-CameraAcq.bsh  2-CameraAcqStage.bsh  2-CameraTimeLapse.bsh  Acquisition.bsh  AssembleData.bsh  AutoExpose.bsh  Big_WellPateTest.bsh  BurstExample.bsh  CachedCanvas.bsh  CameraLabs.bsh  CameraMeasure.bsh  ExportImageSequence.bsh  FPN.bsh  IA.ijm  Init.bsh  Init_Mac.bsh  IntelligentAcq.bsh  MMAcquisitionMTMosaic.bsh  MMStartup.bsh  Makefile.am  Makefile.am.nextgen  MultiFastZStackASI.bsh  OpenPluginsAndMDA.bsh  PluggableDisplayDemo.bsh  SliceMMDataSets.bsh  StopAllSequences.bsh  ThorlabsPowerMeasurement.bsh  ThreadExample.bsh  Wellplate-Marking.bsh  acqLC.bsh  acqMissingFrames.bsh  autoExpose.bsh  auto_pixel_calibration.bsh  autodetect_pilot.bsh  autofocus_test.bsh  beanshellSocket.bsh  burst.bsh  burstAcquisition.bsh  cameraAnalysis.bsh  cameraResponseLab.bsh  (+65 more)
(+8858 files in other folders)
